# SENTINEL

./: .gitignore  LICENSE  PERFORMANCE_TESTING.md  README.md  TESTING_INDEX.md  TEST_SUMMARY.md  comprehensive_test.py  integration_test.py  pyproject.toml  report.md  test_semantic_example.py
.github/workflows/: senytl.yml
docs/: performance.md  state_persistence.md
docs/guides/: performance_feature_summary.md  phase3_features.md  tests_quick_start.md
docs/reports/: framework_analysis_report.md  phase2_report.md  phase3_implementation.md  phase3_test_results.md
examples/: performance_demo.py  sla_testing_example.py  state_persistence_demo.py
sentinel/: __init__.py  adapters.py  adversarial.py  assertions.py  config.py  core.py  mock_engine.py  models.py  patching.py  pytest_plugin.py  recording.py  snapshot.py  trajectory.py
senytl/: __init__.py  __main__.py  _version.py  adapters.py  adversarial.py  assertions.py  behavior.py  ci.py  cli.py  config.py  core.py  coverage.py  generation.py  models.py  multi_agent.py  patching.py  performance.py  pytest_plugin.py  recording.py  semantic.py  snapshot.py  state.py  trajectory.py  utils.py
tests/: conftest.py  test_adversarial.py  test_behavior.py  test_ci_comprehensive.py  test_cli_comprehensive.py  test_core.py  test_coverage_comprehensive.py  test_example_agent.py  test_generation_comprehensive.py  test_multi_agent_comprehensive.py  test_performance.py  test_performance_integration.py  test_phase1.py  test_phase3_features.py  test_pytest_integration.py  test_semantic.py  test_snapshot.py  test_state.py  test_trajectory.py
web/: README.md  index.html
web/css/: styles.css
web/docs/: assertions.html  cli.html  coverage.html  installation.html  multi-agent.html  performance.html  quickstart.html  state.html  testing.html  tutorial.html
web/examples/: basic-testing.html  performance-testing.html
web/js/: main.js
