[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel"
version = "0.1.0"
description = "Deterministic, fast testing utilities for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sentinel" }]
license = { text = "MIT" }
dependencies = ["tomli>=2; python_version<'3.11'"]

[project.optional-dependencies]
pytest = ["pytest>=7"]

[project.entry-points.pytest11]
sentinel = "sentinel.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.sentinel]
fallback = "error"  # error | default

