[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "senytl"
version = "0.1.0"
description = "Deterministic, fast testing utilities for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Senytl" }]
license = { text = "MIT" }
dependencies = [
    "tomli>=2; python_version<'3.11'",
    "pyyaml"
]

[project.optional-dependencies]
pytest = ["pytest>=7"]

[project.scripts]
senytl = "senytl.cli:main"

[project.entry-points.pytest11]
senytl = "senytl.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["senytl*"]

[tool.senytl]
fallback = "error"  # error | default

