[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senytl"
version = "0.1.0"
description = "Deterministic, fast testing utilities for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Senytl" }]
license = "MIT"
keywords = ["testing", "pytest", "llm", "agents", "mocking", "snapshot-testing", "coverage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "tomli>=2; python_version<'3.11'",
    "pyyaml>=6.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
pytest = ["pytest>=7"]
semantic = [
    "sentence-transformers>=2.0.0",
    "torch>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/senytl/senytl"
Repository = "https://github.com/senytl/senytl"
Issues = "https://github.com/senytl/senytl/issues"

[project.scripts]
senytl = "senytl.cli:main"

[project.entry-points.pytest11]
senytl = "senytl.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["senytl*"]

[tool.senytl]
fallback = "error"  # error | default